--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div class="header">
-    <h1>{{ site.name }}</h1>
+    <h1>The Lab</h1>
     <br>
-    <h5><i>{{ site.description }}</i></h5>
+    <h5><i>Security research, tools, and random observations</i></h5>
     <br>
     {% include nav.html %}
     <hr>
