Update Jekyll configuration and add proper navigation

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <div class="header">
-    <h1>The Lab</h1>
+    <h1>Voidwire Labs</h1>
     <br>
     <h5><i>Security research, tools, and random observations</i></h5>
     <br>
