--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -36,7 +36,7 @@
     margin: 35px 0;
     
     li {
-      margin-bottom: 5px;  // Reduced from 15px to 5px
+      margin-bottom: 0;  // Removed margin completely
     }
 
     + p {
@@ -49,7 +49,7 @@
     margin: 35px 0;
     
     li {
-      margin-bottom: 5px;  // Reduced from 15px to 5px
+      margin-bottom: 0;  // Removed margin completely
     }
 
     + p {
