--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -1,3 +1,5 @@
+---
+---
 .post-info {
   padding-bottom: 30px;
   margin: 20px 0 5px;
@@ -36,7 +38,7 @@
     margin: 35px 0;
     
     li {
-      margin-bottom: 0;  // Removed margin completely
+      margin-bottom: 0;
     }
 
     + p {
@@ -49,7 +51,7 @@
     margin: 35px 0;
     
     li {
-      margin-bottom: 0;  // Removed margin completely
+      margin-bottom: 0;
     }
 
     + p {
