--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -15,7 +15,7 @@
     padding-bottom: 20px;
     padding-top: 20px;
   }
-  .post-content ul,
-  .post-content ol {
-    margin-bottom: 1.5em;
+  .post-content ul + p,
+  .post-content ol + p {
+    margin-top: 1.5em;
   }
