--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -28,25 +28,47 @@
       margin-bottom: .5em;
     }
   
-    // New blockquote styles
+    // Enhanced blockquote styles
     blockquote {
-      margin: 1.5em 0;
-      padding: 1em 1.5em;
-      border-left: 4px solid #666;
-      background-color: #f9f9f9;
-      font-style: italic;
+      margin: 2em 0;
+      padding: 1.5em 2em;
+      border-left: 5px solid #2c3e50;
+      background-color: #f8f9fa;
+      position: relative;
+      
+      // Optional: Add quotation mark
+      &::before {
+        content: '"';
+        position: absolute;
+        top: 0;
+        left: 10px;
+        font-size: 3em;
+        color: rgba(44, 62, 80, 0.1);
+        font-family: Georgia, serif;
+      }
       
       p {
         margin: 0;
-        color: #555;
+        color: #34495e;
+        font-size: 1.1em;
+        line-height: 1.6;
+        
+        // Handle multiple paragraphs within blockquote
+        & + p {
+          margin-top: 1em;
+        }
       }
       
-      cite {
-        display: block;
-        margin-top: 0.5em;
-        font-size: 0.9em;
-        color: #777;
-        font-style: normal;
+      // Handle consecutive blockquotes
+      & + blockquote {
+        margin-top: 1em;
+      }
+    }
+  
+    // Style for lists before blockquotes
+    ul, ol {
+      & + blockquote {
+        margin-top: 1.5em;
       }
     }
   }
