--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -8,14 +8,12 @@
   line-height: 35px;
   padding-bottom: 50px;
 
-  /* More aggressive paragraph spacing */
+  /* Add spacing between paragraphs */
   p {
-    margin-bottom: 2em !important;  /* Force spacing with !important */
-  }
-
-  /* Reset margin for last paragraph in a section */
-  p:last-child {
-    margin-bottom: 0;
+    margin: 0;
+    & + p {
+      margin-top: 1.5em;  /* Increased from your original spacing */
+    }
   }
 
   h1, h3, code, pre {
@@ -26,7 +24,6 @@
   h2 {
     padding-bottom: 20px;
     padding-top: 20px;
-    margin-top: 2em;  /* Added spacing above headings */
   }
 
   ul + p,
@@ -39,6 +36,7 @@
     margin-bottom: .5em;
   }
 
+  /* Dark theme blockquote with fancy quotes */
   blockquote {
     margin: 1.5em 0;
     padding: 1.5em 2em;
@@ -47,6 +45,7 @@
     border-radius: 4px;
     position: relative;
 
+    /* Opening quote */
     &::before {
       content: '"';
       position: absolute;
@@ -57,6 +56,7 @@
       color: rgba(255, 255, 255, 0.15);
     }
 
+    /* Closing quote */
     &::after {
       content: '"';
       position: absolute;
@@ -83,7 +83,6 @@
   }
 
   ul, ol {
-    margin-bottom: 2em;  /* Added spacing after lists */
     & + blockquote {
       margin-top: 1.5em;
     }
